--- a/experience.html
+++ b/experience.html
@@ -82,7 +82,7 @@
                     <div class="timeline-text-wrapper">
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
                             <strong>Business Intelligence Developer Intern - CDIC</strong><br></h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">The Canada Deposit Insurance Corporation is a Canadian federal Crown Corporation which provides deposit insurance against the loss of eligible deposits at member institutions in the event of failure. Some members include: RBC, TD, CIBC, BMO etc.<br><br>I am excited to be joining CDIC's Digital Transformation &amp; Enterprise Technology's team this summer term!<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">The Canada Deposit Insurance Corporation is a Canadian federal Crown Corporation which provides deposit insurance against the loss of eligible deposits at member institutions in the event of failure. Some members include: RBC, TD, CIBC, BMO etc.<br><br>I am excited to be joining CDIC's team this summer term!<br></p>
                     </div>
                 </div>
             </div>
