--- a/education.html
+++ b/education.html
@@ -65,7 +65,7 @@
             <div class="col-12 col-lg-5">
                 <div class="image-wrapper">
                     <img src="assets/images/uoft-900x500.png" alt="Mobirise">
-                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-7"></p><p><strong>School</strong>: University of Toronto</p><p><strong>Program</strong>: Computer Science Specialist</p><p><strong>CGPA</strong>: 3.71 / 4.00</p><br>
+                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-7"></p><p><strong>School</strong>: University of Toronto</p><p><strong>Program</strong>: Computer Science Specialist & Mathematics Minor</p><p><strong>CGPA</strong>: 3.71 / 4.00</p><br>
                     <p><strong>Achievements:</strong></p><p>‣ Program Spotlight Guest Speaker&nbsp; - Invited by the Computer Science department to share academic experiences and provide insights to ~100 prospective students<strong><br></strong></p>
                     <p>‣ Dean's List (2020, 2021) - Awarded to students with a GPA above 3.5</p><p>‣ Computer Organization Learning Excellence Award<br></p><p>‣ Computer Science Honour Roll</p><p>‣ Entrance scholarship<br></p><br>
                     <p><br><strong>Courses Completed:</strong></p><p>‣ CSC363 | Computational Complexity and Computability</p><p>‣ CSC209 | Software Tools and Systems Programming</p><p>‣ CSC258 | Computer Organization</p>
