--- a/projects.html
+++ b/projects.html
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="bottom-line">
-                        <p class="mbr-text mbr-fonts-style display-7">‣ Designed and implemented the game "Doodle Jump" <br></p>
+                        <p class="mbr-text mbr-fonts-style display-7">‣ Designed and implemented a simplified "Doodle Jump" game <br></p>
                     </div>
                 </div>
             </div>
