--- a/index.html
+++ b/index.html
@@ -71,7 +71,24 @@
                         <div class="card-box">
                             <h5 class="card-title mbr-fonts-style m-0 display-5"><p>
                                 <strong>Axel Visan</strong>&nbsp;&nbsp;&nbsp;&nbsp;</p></h5>
-                            <h6 class="mbr-fonts-style mb-3 display-4">Thank you for visiting my page! 👋<br><br><div>I am from Burlington, Ontario and am entering my third year in computer science studies 💻</div><br>I am passionate about software, problem solving and travelling 🙂<br><div><br></div><div>I invite you to connect on LinkedIn 👇</div></h6>
+                            <h6 class="mbr-fonts-style mb-3 display-4">Thank you for visiting my page! 👋
+                              <br><br><div>I am from Burlington, Ontario and am entering my third year in computer science studies 💻</div>
+                              <br>I am passionate about software development, problem solving and travelling 🙂
+                              <br><div><br></div><div>I invite you to connect on LinkedIn 👇</div>
+                              <div><br>Languages:<br>
+                                ‣ Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
+
+<div><br>Tools & Technologies:<br>
+‣ Unix / Linux, Azure DevOps, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis Services (SSAS), SQL Server Data Tools (SSDT), Git, TFVC, Tabular Models, JavaFX</div>
+
+<div><br>Skills:<br>
+‣ Agile Software Development, Data Integration, ETL, Master Data Management (MDM), Business Requirements Analysis, Data Warehousing and Databases</div>
+
+<div><br>‣ Fluent in English, French (10 years in France) & Romanian</div>
+<div><br>‣ Open to software / data related internships for May-August 2022</div>
+
+                          
+                              </h6>
                             
                             <div class="social-row display-7">
                                 <div class="soc-item">
