--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
                               <br><br><div>I am from Burlington, Ontario and am entering my third year in computer science studies 💻</div>
                               <br>I am passionate about software development, problem solving and travelling 🙂
                               
-                              <div><br><b>Languages:<\b><br>
+                              <div><br><b>Languages:</b><br>
                                 ‣ Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
 
-<div><br><b>Tools & Technologies:<\b><br>
+<div><br><b>Tools & Technologies:</b><br>
 ‣ Unix / Linux, Azure DevOps, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis Services (SSAS), SQL Server Data Tools (SSDT), Git, TFVC, Tabular Models, JavaFX</div>
 
-<div><br><b>Skills:<\b><br>
+<div><br><b>Skills:</b><br>
 ‣ Agile Software Development, Data Integration, ETL, Master Data Management (MDM), Business Requirements Analysis, Data Warehousing and Databases</div>
 
-<div><br>‣ Fluent in English, French (10 years in France) & Romanian</div>
+<div><br>‣ Fluent in <b>English</b>, <b>French</b> (10 years in France) & <b>Romanian</b></div>
 <div><br>‣ Open to software / data related internships for May-August 2022</div>
 <br><div><br></div><div>I invite you to connect on LinkedIn 👇</div>
                           
