--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
 
 <div><br><b>Tools & Technologies:</b><br>
-Unix / Linux, Azure DevOps, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis Services (SSAS), SQL Server Data Tools (SSDT), Git, TFVC, Tabular Models, JavaFX</div>
+Unix / Linux, Azure (DevOps, Synapse Analytics, Data Lake), PySpark API, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular & Multidimensional Models, JavaFX</div>
 
 <div><br><b>Skills:</b><br>
 Agile Software Development, Data Integration, ETL, Master Data Management (MDM), Business Requirements Analysis, Data Warehousing and Databases</div>
