--- a/experience.html
+++ b/experience.html
@@ -82,7 +82,16 @@
                     <div class="timeline-text-wrapper">
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
                             <strong>Business Intelligence Developer Intern - CDIC</strong><br></h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">The Canada Deposit Insurance Corporation is a Canadian federal Crown Corporation which provides deposit insurance against the loss of eligible deposits at member institutions in the event of failure. Some members include: RBC, TD, CIBC, BMO etc.<br><br>I am excited to be joining CDIC's team this summer term!<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7"> CDIC is a Canadian federal Crown Corporation which provides deposit insurance ($968 billion as of 2020) against the loss of eligible deposits at member institutions in the event of financial failure.
+
+                      <br>‣ Worked through a Scrum framework to design and develop features to support CDIC's latest enterprise data warehouse and system requirements (DSR 3.1)
+                      <br>‣ Migrated the legacy code of Multidimensional OLAP Cubes to Tabular Models through SQL, DAX, Power Query, SSDT, SSAS & SSMS and deployed the project to business production
+                      <br>‣ Assisted in the development of data pipelines and Python (PySpark API) notebook scripts in Azure Synapse Analytics for the data warehouse modernization to cloud based Data Lake Storage (ADLS)
+                      <br>‣ Designed and implemented an ETL tool with Alteryx to automate Customized Audit Reports
+                      <br>‣ Collected business requirements to implement schema and data quality / technical enhancements
+                      <br>‣ Maintained a scalable BI environment that will effectively support the growth of Canada's financial system
+                          
+                          <br></p>
                     </div>
                 </div>
             </div>
