--- a/index.html
+++ b/index.html
@@ -72,15 +72,14 @@
                             <h5 class="card-title mbr-fonts-style m-0 display-5"><p>
                                 <strong>Axel Visan</strong>&nbsp;&nbsp;&nbsp;&nbsp;</p></h5>
                             <h6 class="mbr-fonts-style mb-3 display-4">Thank you for visiting my page! 👋
-                              <br><br><div>I am from Burlington, Ontario and am entering my third year in computer science studies 💻</div>
-                              <br>I am passionate about software development, problem solving and travelling 🙂
+                              <br><br><div>I am currenty a 3rd year student at the University of Toronto.</div>
+                              <br>I am seeking software / data related internships for the summer of 2022. 
                               
                               <div><br><b>Languages:</b><br>
                                 Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
 
 <div><br><b>Tools & Technologies:</b><br>
-Unix / Linux, Azure (DevOps, Synapse Analytics, Data Lake), PySpark API, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular & Multidimensional Models, JavaFX</div>
-
+Unix / Linux, Azure (DevOps, Synapse Analytics, Data Lake Storage), PySpark API, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular & Multidimensional Models, JavaFX
 <div><br><b>Skills:</b><br>
 Agile Software Development, Data Integration, ETL, Master Data Management (MDM), Business Requirements Analysis, Data Warehousing and Databases</div>
 
