--- a/experience.html
+++ b/experience.html
@@ -81,9 +81,10 @@
                     <div class="timeline-text-wrapper">
                         <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5">
                             <strong>Teaching Assistant - UofT</strong><br></h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">‣ Introduction to Computer Programming (CSC108)
-                          <br>‣ Theory of Computation (CSC236)
-                          <br>‣ Provided lecture assistance, held office hours, invigilated examinations, graded assignments and 
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">
+                          <br>CSC236: Theory of Computation (Fall 2021)
+                          <br>CSC108: Introduction to Computer Programming (Winter 2021)
+                          <br><br>‣ Provided lecture assistance, held office hours, invigilated examinations, graded assignments and 
                           monitored the online discussion board
                           <br><br><em>"[Axel] always provided the answer I favoured, i.e., the cause of the outcome examined and the causal explanation. Very calm, professional and lucid."</em><br><em>- Lecture Supervisor</em><br><br><em>"I really like how [Axel] is answering, and not giving out clues that [he] shouldn't give, but still trying to point other students in the right direction."<br>- Dr. Zingaro (Associate Professor and Computer Science Faculty Advisor)<br></em></p>
                     </div>
