--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <strong>Axel Visan</strong>&nbsp;&nbsp;&nbsp;&nbsp;</p></h5>
                             <h6 class="mbr-fonts-style mb-3 display-4">Thank you for visiting my page! 👋
                               <br><br><div>I am currenty a 3rd year student at the University of Toronto.</div>
-                              <br>I am seeking software / data related internships for the summer of 2022. 
+                              <br><b>I am seeking software / data related internships for the summer of 2022.</b> 
                               
                               <div><br><b>Languages:</b><br>
                                 Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
@@ -84,7 +84,6 @@ Unix / Linux, Azure (DevOps, Synapse Analytics, Data Lake Storage), PySpark API,
 Agile Software Development, Data Integration, ETL, Master Data Management (MDM), Business Requirements Analysis, Data Warehousing and Databases</div>
 
 <div><br>Fluent in <b>English</b>, <b>French</b> (10 years in France) & <b>Romanian</b></div>
-<div>Open to software / data related internships for May-August 2022</div>
 <br><div><br></div><div>I invite you to connect on LinkedIn 👇</div>
                           
                               </h6>
