--- a/experience.html
+++ b/experience.html
@@ -68,7 +68,7 @@
                 <div class="timeline-date col-12">
                     <div class="timeline-date-wrapper">
                         <p class="mbr-timeline-date display-7">
-                            January 2021 - April 2021 & September 2021 - Present</p>
+                            January 2021 - Present</p>
                     </div>
                 </div>
                 <span class="iconBackground"></span>
