--- a/index.html
+++ b/index.html
@@ -125,10 +125,8 @@
                                 <img class="d-block w-100" src="assets/images/2021-osler-student-achievement-awards-2-1440x1080.jpg" data-slide-to="1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                                        <strong>Fixed-Height Slider</strong>
                                     </h5>
-                                    <p class="mbr-section-text mbr-fonts-style display-7">
-                                        Click on the image to edit slides.</p>
+                                    <p class="mbr-section-text mbr-fonts-style display-7"></p>
                                 </div>
                             </div>
                         </div><div class="carousel-item slider-image item">
@@ -136,10 +134,8 @@
                                 <img class="d-block w-100" src="assets/images/2021-osler-student-achievement-awards-3-1440x1080.jpg" data-slide-to="2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                                        <strong>Fixed-Height Slider</strong>
                                     </h5>
-                                    <p class="mbr-section-text mbr-fonts-style display-7">
-                                        Click on the image to edit slides.</p>
+                                    <p class="mbr-section-text mbr-fonts-style display-7"></p>
                                 </div>
                             </div>
                         </div><div class="carousel-item slider-image item">
@@ -147,10 +143,8 @@
                                 <img class="d-block w-100" src="assets/images/2021-osler-student-achievement-awards-4-1440x1080.jpg" data-slide-to="3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                                        <strong>Fixed-Height Slider</strong>
                                     </h5>
-                                    <p class="mbr-section-text mbr-fonts-style display-7">
-                                        Click on the image to edit slides.</p>
+                                    <p class="mbr-section-text mbr-fonts-style display-7"></p>
                                 </div>
                             </div>
                         </div>
