--- a/index.html
+++ b/index.html
@@ -72,7 +72,19 @@
                         <div class="card-box">
                             <h5 class="card-title mbr-fonts-style m-0 display-5"><p>
                                 <strong>Axel Visan</strong>&nbsp;&nbsp;&nbsp;&nbsp;</p></h5>
-                            <h6 class="mbr-fonts-style mb-3 display-4">Thank you for visiting my page! 👋<div><br></div><div>I am a 3rd year <strong>Computer Science</strong> student at the <strong>University of Toronto</strong>.</div><div><br></div><div>I am seeking software / data related internships for the summer of 2022.</div><div><br></div><div><strong>Languages:</strong></div><div>Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div><div><br></div><div><strong>Tools &amp; Technologies:</strong></div><div>Unix / Linux, Azure (DevOps, Synapse Analytics, Data Lake Storage), PySpark API, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular &amp; Multidimensional Models, JavaFX</div><div><br></div><div><strong>Skills:</strong></div><div>Agile Software Development, Data Integration, ETL, Master Data Management (MDM), Business Requirements Analysis, Data Warehousing and Databases</div><div><br></div><div>Fluent in <strong>English</strong>, <strong>French</strong> (10 years in France) &amp; <strong>Romanian</strong></div><div><br></div><div>I invite you to connect on LinkedIn below!</div></h6>
+                            <h6 class="mbr-fonts-style mb-3 display-4">Thank you for visiting my page! 👋<div><br></div>
+                              <div>3rd year <strong>Computer Science</strong> student at the <strong>University of Toronto</strong>
+                                <div><br>Undergraduate <strong>TA</strong> for 2 CS classes (1000+ students)</div>
+                                <div><br>Previously worked for the <strong>Canadian government</strong> at <strong>CDIC</strong> as a BI developer</div>
+                                <div>Fluent in <strong>English</strong>, <strong>French</strong> (10 years in France) &amp; <strong>Romanian</strong></div>
+                              </div><div><br></div><div>I am seeking software / data related internships for the summer of 2022</div>
+                              <div><br></div><div><strong>Languages:</strong></div><div>Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
+                              <div><br></div><div><strong>Tools &amp; Technologies:</strong></div><div>Unix / Linux, Azure (DevOps, Synapse Analytics,
+                              Data Lake Storage), PySpark API, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) 
+                              and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular &amp; Multidimensional Models, JavaFX</div>
+                              <div><br></div><div><strong>Skills:</strong></div><div>Agile Software Development, Data Integration, ETL, Master Data Management 
+                              (MDM), Business Requirements Analysis, Data Warehousing and Databases</div><div><br></div>
+                              <div><br></div><div>I invite you to connect on LinkedIn below!</div></h6>
                             
                             <div class="social-row display-7">
                                 <div class="soc-item">
