--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                             <h5 class="card-title mbr-fonts-style m-0 display-5"><p>
                                 <strong>Axel Visan</strong>&nbsp;&nbsp;&nbsp;&nbsp;</p></h5>
                             <h6 class="mbr-fonts-style mb-3 display-4">Thank you for visiting my page! 👋<div><br></div>
-                              <div>I am 3rd year <strong>Computer Science</strong> student at the <strong>University of Toronto</strong>
-                                <div><br>I work as an undergraduate <strong>TA</strong> for 2 CS classes (1000+ students)</div>
-                                <div><br>I previously interned for the <strong>Canadian government</strong> at <strong>CDIC</strong> as a BI developer</div>
-                                <div><br> I am fluent in <strong>English</strong>, <strong>French</strong> (10 years in France) &amp; <strong>Romanian</strong></div>
-                              </div><div><br></div><div>I am seeking software / data related internships for the summer of 2022</div>
+                              <div>• 3rd year <strong>Computer Science</strong> student at the <strong>University of Toronto</strong>
+                                <div>• Undergraduate <strong>TA</strong> for 2 CS classes (1000+ students)</div>
+                                <div>• Previously worked for the <strong>Canadian government</strong> at <strong>CDIC</strong> as a BI Developer Intern</div>
+                                <div>• Fluent in <strong>English</strong>, <strong>French</strong> (10 years in France) &amp; <strong>Romanian</strong></div>
+                              </div><div></div><div>• Seeking software / data related internships for the summer of 2022</div>
                               <div><br></div><div><strong>Languages:</strong></div><div>Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
                               <div><br></div><div><strong>Tools &amp; Technologies:</strong></div><div>Unix / Linux, Azure (DevOps, Synapse Analytics,
                               Data Lake Storage), PySpark API, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) 
