--- a/index.html
+++ b/index.html
@@ -83,13 +83,14 @@
 
 
 
-                              <div><br></div><div><strong>Languages:</strong></div><div>Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
-                              <div><br></div><div><strong>Tools &amp; Technologies:</strong></div><div>Unix / Linux, Azure (DevOps, Synapse Analytics,
+                              <br>
+                              <div><strong>Languages:</strong></div><div>Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
+                              <br><div><strong>Tools &amp; Technologies:</strong></div><div>Unix / Linux, Azure (DevOps, Synapse Analytics,
                               Data Lake Storage), PySpark API, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) 
                               and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular &amp; Multidimensional Models, JavaFX</div>
-                              <div><br></div><div><strong>Skills:</strong></div><div>Agile Software Development, Data Integration, ETL, Master Data Management 
-                              (MDM), Business Requirements Analysis, Data Warehousing and Databases</div><div><br></div>
-                              <div><br></div><div>I invite you to connect on LinkedIn below!</div></h6>
+                              <br><div><strong>Skills:</strong></div><div>Agile Software Development, Data Integration, ETL, Master Data Management 
+                              (MDM), Business Requirements Analysis, Data Warehousing and Databases</div><br>
+                              <br><div>I invite you to connect on LinkedIn below!</div></h6>
                             
                             <div class="social-row display-7">
                                 <div class="soc-item">
@@ -142,10 +143,7 @@
                                 <img class="d-block w-100" src="assets/images/2021-osler-student-achievement-awards-2-1440x1080.jpg" data-slide-to="1">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                                        <strong>Fixed-Height Slider</strong>
                                     </h5>
-                                    <p class="mbr-section-text mbr-fonts-style display-7">
-                                        Click on the image to edit slides.</p>
                                 </div>
                             </div>
                         </div><div class="carousel-item slider-image item">
@@ -153,10 +151,7 @@
                                 <img class="d-block w-100" src="assets/images/2021-osler-student-achievement-awards-3-1440x1080.jpg" data-slide-to="2">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                                        <strong>Fixed-Height Slider</strong>
                                     </h5>
-                                    <p class="mbr-section-text mbr-fonts-style display-7">
-                                        Click on the image to edit slides.</p>
                                 </div>
                             </div>
                         </div><div class="carousel-item slider-image item">
@@ -164,10 +159,7 @@
                                 <img class="d-block w-100" src="assets/images/2021-osler-student-achievement-awards-4-1440x1080.jpg" data-slide-to="3">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5 class="mbr-section-subtitle mbr-fonts-style display-5">
-                                        <strong>Fixed-Height Slider</strong>
                                     </h5>
-                                    <p class="mbr-section-text mbr-fonts-style display-7">
-                                        Click on the image to edit slides.</p>
                                 </div>
                             </div>
                         </div>
@@ -196,7 +188,9 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-12 col-md-10 video-block">
-                <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/nBKVzOX8msg?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+                <div class="video-wrapper"><iframe class="mbr-embedded-video" 
+                    src="https://www.youtube.com/embed/nBKVzOX8msg?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" 
+                    frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-4"></p>
             </div>
         </div>
@@ -216,7 +210,15 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/t" style="color:#aaa;"></a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 
+'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
+<a href="https://mobirise.site/y" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+<p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/t" style="color:#aaa;"></a></p>
+</section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  
+<script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  
+<script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  
+<script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  
+<script src="assets/playervimeo/vimeo_player.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
