--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                               <br>
                               <div><strong>Languages:</strong></div><div>Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
                               <br><div><strong>Tools &amp; Technologies:</strong></div><div>Unix / Linux, Azure (DevOps, Synapse Analytics,
-                              Data Lake Storage), PySpark API, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) 
+                              Data Lake Storage), PySpark, NumPy, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) 
                               and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular &amp; Multidimensional Models, JavaFX</div>
                               <br><div><strong>Skills:</strong></div><div>Agile Software Development, Data Integration, ETL, Master Data Management 
                               (MDM), Business Requirements Analysis, Data Warehousing and Databases</div><br>
