--- a/index.html
+++ b/index.html
@@ -74,22 +74,25 @@
                                 <strong>Axel Visan</strong>&nbsp;&nbsp;&nbsp;&nbsp;</p></h5>
                             <h6 class="mbr-fonts-style mb-3 display-4">
                                 <ul>
-                                    <li>3rd year <strong>Computer Science</strong> student at the <strong>University of Toronto</strong></li>
-                                    <li>Undergraduate <strong>TA</strong> for 2 CS classes (1000+ students)</li>
-                                    <li>Previously worked for the <strong>Canadian Government</strong> at <strong>CDIC</strong> as a BI Developer Intern</li>
-                                    <li>Fluent in <strong>English</strong>, <strong>French</strong> (10 years in France) <strong>Romanian</strong></li>
-                                    <li>Seeking software / data related internships for the summer of 2022</li>
+                                    <li>Hi! I'm Axel, a 3rd year Computer Science student at the University of Toronto.</li>
+                                    <li>I am passionate about developing software by turning abstract concepts into practical and efficient solutions.</li>
+                                    <li>I previously interned at the Canadian Government at CDIC as a BI Developer, and currently work part time as an Undergraduate University Teaching Assistant for 2 CS classes (1500+ students).</li>
+                                    <li>Throughout these roles and my studies, I have developed important skills to become a reliable and diligent team player.</li>
+                                    <li>I am fluent in English, French (10 years in France), and Romanian.</li>
+                                  <li>I am seeking software internships for the summer of 2022 at mission-driven companies.</li>
                                   </ul>
 
 
 
                               <br>
-                              <div><strong>Languages:</strong></div><div>Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX</div>
-                              <br><div><strong>Tools &amp; Technologies:</strong></div><div>Unix / Linux, Azure (DevOps, Synapse Analytics,
-                              Data Lake Storage), PySpark, NumPy, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) 
-                              and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular &amp; Multidimensional Models, JavaFX</div>
-                              <br><div><strong>Skills:</strong></div><div>Agile Software Development, Data Integration, ETL, Master Data Management 
-                              (MDM), Business Requirements Analysis, Data Warehousing and Databases</div><br>
+                              <div><strong>Languages:</strong></div><div>Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX, Racket, Haskell
+</div>
+                              <br><div><strong>Tools &amp; Technologies:</strong></div><div>Unix, Linux, Azure (DevOps, Synapse Analytics, Data Lake Storage), 
+                              PySpark, NumPy, SciPy, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) 
+                              and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular & Multidimensional Models, JavaFX</div>
+                              <br><div><strong>Skills:</strong></div><div>Agile software development & engineering, Scrum, data integration, ETL, MDM, 
+                              data warehousing, databases, customer facing, 
+                              business requirements, information security, algorithms, machine learning</div><br>
                               <br><div>I invite you to connect on LinkedIn below!</div></h6>
                             
                             <div class="social-row display-7">
