--- a/experience.html
+++ b/experience.html
@@ -100,8 +100,15 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="timeline-text-wrapper">
-                        <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5"><strong>Business Intelligence Developer Intern - CDIC</strong></h4>
-                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">CDIC is a Canadian federal Crown Corporation which provides deposit insurance ($968 billion as of 2020) against the loss of eligible deposits at member institutions in the event of financial failure.<br><br>‣ Worked through a Scrum framework to design and develop features to support CDIC's latest enterprise data warehouse and system requirements (DSR 3.1)<br>‣ Migrated the legacy code of Multidimensional OLAP Cubes to Tabular Models through SQL, DAX, Power Query, SSDT, SSAS &amp; SSMS and deployed the project to business production<br>‣ Assisted in the development of data pipelines and Python (PySpark API) notebook scripts in Azure Synapse Analytics for the data warehouse modernization to cloud based Data Lake Storage (ADLS)<br>‣ Designed and implemented an ETL tool with Alteryx to automate Customized Audit Reports<br>‣ Collected business requirements to implement schema and data quality / technical enhancements<br>‣ Maintained a scalable BI environment that will effectively support the growth of Canada's financial system<br><br></p>
+                        <h4 class="mbr-timeline-title mbr-fonts-style mb-0 display-5"><strong>Software Developer Intern - CDIC</strong></h4>
+                        <p class="mbr-text mbr-fonts-style mt-3 mb-0 display-7">CDIC is a Canadian federal Crown Corporation which provides deposit insurance ($968 billion as of 2020) against the loss of eligible deposits at member institutions in the event of financial failure.
+                          <br><br>‣ Worked through a Scrum framework with Azure DevOps to design and develop features to support CDIC's latest system requirements (DSR 3.1)
+                          <br>‣ Migrated the legacy code of Multidimensional OLAP Cubes to Tabular Models, improving both performance and user experience
+                          <br>‣ Carried out SQL Unit Testing with SSDT (Microsoft SQL Server Data Tools)
+                          <br>‣ Developed Python (PySpark API) scripts and data pipelines in Azure Synapse Analytics for the data warehouse modernization to cloud based Data Lake Storage (ADLS)
+                          <br>‣ Designed and implemented an ETL tool with Alteryx to automate and improve the accuracy of Customized Audit Reports
+                          <br>‣ Collected business requirements to implement schema and data quality / technical enhancements
+                          <br>‣ Maintained a scalable BI environment that will effectively support the growth of Canada's financial system<br><br></p>
                     </div>
                 </div>
             </div>
