--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                 <ul>
                                     <li>Hi! I'm Axel, a 3rd year Computer Science student at the University of Toronto.</li>
                                     <li>I am passionate about developing software by turning abstract concepts into practical and efficient solutions.</li>
-                                    <li>I previously interned at the Canadian Government at CDIC as a BI Developer, and currently work part time as an Undergraduate University Teaching Assistant for 2 CS classes (1500+ students).</li>
+                                    <li>I previously interned at the Canadian Government at CDIC as a Software Developer, and currently work part time as an Undergraduate University Teaching Assistant.</li>
                                     <li>Throughout these roles and my studies, I have developed important skills to become a reliable and diligent team player.</li>
                                     <li>I am fluent in English, French (10 years in France), and Romanian.</li>
                                   <li>I am seeking software internships for the summer of 2022 at mission-driven companies.</li>
