--- a/index.html
+++ b/index.html
@@ -85,14 +85,13 @@
 
 
                               <br>
-                              <div><strong>Languages:</strong></div><div>Python, Java, C, SQL, Bash, Assembly, M, DAX, MDX, Processing, TeX, Racket, Haskell
+                              <div><strong>Languages:</strong></div><div>Python, Java, C, SQL, HTML, CSS, JavaScript, Bash, Assembly, M, DAX, MDX, Processing, TeX, Racket, Haskell
 </div>
                               <br><div><strong>Tools &amp; Technologies:</strong></div><div>Unix, Linux, Azure (DevOps, Synapse Analytics, Data Lake Storage), 
-                              PySpark, NumPy, SciPy, Alteryx, Power Query, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) 
-                              and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Git, TFVC, Tabular & Multidimensional Models, JavaFX</div>
-                              <br><div><strong>Skills:</strong></div><div>Agile software development & engineering, Scrum, data integration, ETL, MDM, 
-                              data warehousing, databases, customer facing, 
-                              business requirements, information security, algorithms, machine learning</div><br>
+                              PySpark, NumPy, SciPy, Django, React, Neo4j, Alteryx, Power BI, SQL Server Management Studio (SSMS), Microsoft Analysis (SSAS) and 
+                              Integration (SSIS) Services , SQL Server Data Tools (SSDT), Mongo DB, Git, TFVC, Tabular & Multidimensional, Kali, OpenSSL, Tripwire, Wireshark</div>
+                              <br><div><strong>Skills:</strong></div><div>Agile software development & engineering, Scrum, data integration, ETL, MDM, data warehousing, databases,
+                              customer facing, business requirements, networks, information & cyber security, operating systems & algorithms</div><br>
                               <br><div>I invite you to connect on LinkedIn below!</div></h6>
                             
                             <div class="social-row display-7">
