--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                               <strong>Data Science:</strong>
                               </div>
                               <div>Azure Synapse Analytics & Data Lake Storage, Databricks, PySpark, SQL Server Management Studio (SSMS),
-Microsoft Analysis (SSAS) and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Tabular, Multidimensional, Alteryx</div><br>
+Microsoft Analysis (SSAS) and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Tabular, Multidimensional, Alteryx</div>
                               
                               <br><div>
                               <strong>Security:</strong>
