--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Microsoft Analysis (SSAS) and Integration (SSIS) Services , SQL Server Data Tool
                               </div>
                               <div>Kali Linux, OpenSSL, Tripwire, Wireshark, Nmap, Penetration Testing
                               
-                              <br><div>I invite you to connect on LinkedIn below!</div></h6>
+                              <br><br><div>I invite you to connect on LinkedIn below!</div></h6>
                             
                             <div class="social-row display-7">
                                 <div class="soc-item">
