--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                               
                               
                               <br><div>
-                              <strong>Data Science:</strong>
+                              <strong>Data:</strong>
                               </div>
                               <div>Azure Synapse Analytics & Data Lake Storage, Databricks, PySpark, SQL Server Management Studio (SSMS),
 Microsoft Analysis (SSAS) and Integration (SSIS) Services , SQL Server Data Tools (SSDT), Tabular, Multidimensional, Alteryx</div>
